--- a/README
+++ b/README
@@ -1,3 +1,12 @@
+==================================
+== Universal Application Server ==
+==================================
+
+*******************************************
+** support mode: unix socket|inet socket **
+** support protocol: custom|fastcgi      **
+*******************************************
+
 ###############################################################
 ## Скрипты сервера должны запускаться из директории сервера! ##
 ## Server scripts must launch from directory of application! ##
