--- a/README
+++ b/README
@@ -7,7 +7,7 @@
 ** support protocol: custom|fastcgi      **
 *******************************************
 
-###############################################################
-## Скрипты сервера должны запускаться из директории сервера! ##
-## Server scripts must launch from directory of application! ##
-###############################################################
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+++ Скрипты сервера должны запускаться из директории сервера! ++
+++ Server scripts must launch from directory of application! ++
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
