--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-==================================
-== Universal Application Server ==
-==================================
+=======================================
+== Universal Perl Application Server ==
+=======================================
 
 *******************************************
 ** support mode: unix socket|inet socket **
